12178 嘗試用字符運算做Q和C的，但目前沒有成功

--- a/1676 -I2P(I) 2019_Spring_Chen_Midterm2_Practice/12178-Queens and Castles/12178-Queens and Castles.cbp
+++ b/1676 -I2P(I) 2019_Spring_Chen_Midterm2_Practice/12178-Queens and Castles/12178-Queens and Castles.cbp
@@ -31,6 +31,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="bitsQC.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
