--- a/1697 -I2P(I) 2019_Spring_Chen_HW5/12155/12155.cbp
+++ b/1697 -I2P(I) 2019_Spring_Chen_HW5/12155/12155.cbp
@@ -31,7 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="main.c">
+		<Unit filename="DFS.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="adj matrix.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
