Trie 參考助教答案自己寫一次

--- a/1690 -DS_Hon_hw3/12295/12295.cbp
+++ b/1690 -DS_Hon_hw3/12295/12295.cbp
@@ -32,7 +32,7 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="pad.cpp" />
+		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
