--- a/1935 - I2P(II)2020_Lee_HW1/12677/12677.cbp
+++ b/1935 - I2P(II)2020_Lee_HW1/12677/12677.cbp
@@ -31,6 +31,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="12677.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
