--- a/1994 - I2P(II)2020_Lee_Mid2_Practice/12764 shape BST/12764 shape BST.cbp
+++ b/1994 - I2P(II)2020_Lee_Mid2_Practice/12764 shape BST/12764 shape BST.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="11438 list" />
+		<Option title="12764 shape BST" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/11438 list" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/12764 shape BST" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/11438 list" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/12764 shape BST" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,7 +31,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="11438 list.cpp" />
+		<Unit filename="12764 shape BST.cpp" />
 		<Unit filename="function.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
